<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/zzzz"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    tools:context="com.yhl.demoother.activity.LoginActivity">
    <!--背景色为白色@color/color_ffffff  @drawable/four_screen_bg-->
    <com.makeramen.roundedimageview.RoundedImageView
        android:layout_width="171dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:paddingTop="32dp"
        android:src="@mipmap/ssk_touxiang"
        app:riv_border_color="#08a2f2"
        app:riv_border_width="2dp"
        app:riv_oval="true" />
    <!--圆角填充色app:riv_border_color="#333333"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="200dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_mobile_flag" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
                android:hint="@string/hint_login_username"
                android:inputType="textVisiblePassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="14dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_eeeeee" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="13dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15dp"
                android:src="@mipmap/ic_password_flag" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzQWERTYUIOPASDFGHJKLZXCVBNM"
                android:hint="@string/hint_login_password"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="@color/color_999999"
                android:textColorHint="@color/color_999999"
                android:textSize="14dp" />

            <ImageView
                android:id="@+id/clean_password"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@mipmap/ic_clear"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/iv_show_pwd"
                android:layout_width="40dp"
                android:layout_height="fill_parent"
                android:scaleType="centerInside"
                android:src="@mipmap/pass_gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/color_eeeeee" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="21dp"
            android:background="@drawable/bg_btn_login_selected"
            android:onClick="onforget"
            android:text="@string/login"
            android:textColor="@color/color_ffffff"
            android:textSize="18dp" />

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:text="@string/login_forget_pwd"
                android:textColor="@color/color_c61a04"
                android:textSize="14dp" />

            <TextView
                android:id="@+id/tv_regist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="21dp"
                android:onClick="onforget"
                android:text="@string/newaccount"
                android:textColor="@color/color_c61a04"
                android:textSize="14dp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:gravity="bottom">

        <ImageButton
            android:id="@+id/btn_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="120dp"
            android:onClick="onforget"
            app:srcCompat="@mipmap/ssdk_oks_classic_qq" />

        <ImageButton
            android:id="@+id/btn_sina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btn_qq"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="80dp"
            android:layout_marginRight="50dp"
            android:onClick="onforget"
            app:srcCompat="@mipmap/ssdk_oks_classic_sinaweibo" />
    </LinearLayout>
</RelativeLayout>
